# light-riders-bot

./: CMakeLists.txt  README.md  build.bat  main.cpp
src/: Board.cpp  Board.h  BobBot.cpp  BobBot.h  BobikBot.cpp  BobikBot.h  Bot.cpp  Bot.h  GameEnums.h  Logger.cpp  Logger.h  LongestBot.cpp  LongestBot.h  Optional.h  Parser.cpp  Parser.h  Position.cpp  Position.h  RandomBot.cpp  RandomBot.h  SnakeitBot.cpp  SnakeitBot.h
